--- a/exercise2_solution.ipynb
+++ b/exercise2_solution.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "</div>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "(45000, 48)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
        "(45000,)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,18 +965,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best param rtc: {'bootstrap': True, 'max_depth': 0.01, 'max_features': 1, 'n_estimators': 10}\nScore rtc: 0.6183333333333333\nROC score :  0.5\n"
+      "Best param rtc: {'bootstrap': True, 'max_depth': 0.01, 'max_features': 1, 'n_estimators': 10}\nScore rtc: 0.6206666666666667\nROC score :  0.5\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "params = {\n",
     "    \"n_estimators\": [10, 20, 25,50,100],\n",
     "    \"max_features\": np.arange(1,10,2),\n",
@@ -1000,25 +1002,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best param rtc: {'bootstrap': True, 'max_depth': 0.01, 'max_features': 1, 'n_estimators': 10}\nScore rtc: 0.6183333333333333\nROC score :  0.5\n"
-     ]
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-f09fd9b4753c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mgrid_gbc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgbc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_grid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mgrid_gbc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mbest_gbc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid_gbc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Best param gbc:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrid_gbc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "gbc = GradientBoostingClassifier()\n",
     "par = {\"n_estimators\": [20, 25,50,100],\n",
     "       \"max_features\": np.arange(1,10,2),\n",
     "    \"bootstrap\": [True]}\n",
     "\n",
-    "grid_gbc = GridSearchCV(rfc, param_grid=par)\n",
+    "grid_gbc = GridSearchCV(gbc, param_grid=par)\n",
     "grid_gbc.fit(X_train,y_train)\n",
     "best_gbc = grid_gbc.best_estimator_\n",
     "print(\"Best param gbc:\",grid_gbc.best_params_)\n",
