--- a/Project/project_random_forest_red.ipynb
+++ b/Project/project_random_forest_red.ipynb
@@ -47,7 +47,7 @@
     "import datetime\n",
     "import os\n",
     "\n",
-    "path = \"/Users/martin/Desktop/Cours/Advanced Computing techniques 2018/Project/\"\n",
+    "path = \"/Users/martin/Desktop/Cours/Advanced Computing techniques 2018/Exercices/Project/\"\n",
     "os.chdir(path)\n",
     "\n",
     "import extra_function_date as func\n",
