--- a/Project/project_ANN_red.ipynb
+++ b/Project/project_ANN_red.ipynb
@@ -2508,7 +2508,7 @@
     "        print(\"Bookmaker odds and prediction disagree for the game : \"+ str(home_country[i]) + \" vs \" + str(away_country[i]))\n",
     "        count +=1 \n",
     "        \n",
-    "print(\"algorithm gives expected result of the bookmaker in %2.2f percent of the cases \"%(count/len(odds)*100))\n",
+    "print(\"algorithm gives different result of the bookmaker in %2.2f percent of the cases \"%(count/len(odds)*100))\n",
     "        \n"
    ]
   },
